# mw4agent

./: .gitignore  MEMORY.md  README.md  mw4agent.code-workspace  mw4agent.sessions.json  setup.py
agents/: skills_snapshot.py
docs/: do_impl.md  hermes-agent.md  mw4agent.code-workspace  orchestrating_llm_router.md
mw4agent/desktop/src-tauri/: Cargo.toml  tauri.conf.json
mw4agent/desktop/src-tauri/capabilities/: default.json
mw4agent/desktop/src-tauri/icons/: icon.icns
mw4agent/desktop/src-tauri/src/: lib.rs  main.rs
tests/: README.md  conftest.py  test_agent_manager_delete.py  test_agent_skill_filter.py  test_agent_usage_stats.py  test_auto_compaction.py  test_cli_channels_feishu_add.py  test_cli_sessions.py  test_config_redact.py  test_configuration_agent_llm_wizard.py  test_crypto_secure_io.py  test_exec_tool_execute_sh.py  test_feishu_accounts.py  test_feishu_channel_basic.py  test_feishu_connection_mode.py  test_feishu_user_oauth.py  test_gateway_agents_list_rpc.py  test_gateway_orchestrate_trace_rpc.py  test_gateway_wait_timeout.py  test_llm_config.py  test_llm_per_agent.py  test_llm_stream_events.py  test_memory_index_backend.py  test_memory_index_path.py  test_memory_search_sessions.py  test_orch_agents_md_appendix.py  test_orch_bundle_crypto.py  test_orch_dump.py  test_orch_import.py  test_orch_reply_language.py  test_orch_trace.py  test_orchestrator_inspect.py  test_orchestrator_orch_trace.py  test_orchestrator_reasoning.py  test_orchestrator_reconcile.py  test_orchestrator_router_llm.py  test_orchestrator_supervisor_pipeline.py  test_plugin_loader.py  (+12 more)
(+217 files in other folders)
