[package]
name = "mw4agent-desktop"
version = "0.1.0"
description = "MW4Agent desktop shell"
authors = ["mw4agent"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "mw4agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
